Bug 1286751 - Close the channel when window destroyed. r=rillian

MozReview-Commit-ID: 4FSPOfT5F6R